deploy/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kavach
  labels:
    app.kubernetes.io/name: kavach
    app.kubernetes.io/part-of: kavach
